fixed image overlay spacing

--- a/frontend/styles/shared-styles.css
+++ b/frontend/styles/shared-styles.css
@@ -68,3 +68,8 @@ a[highlight] {
     font-size: 1em;
     margin: var(--lumo-space-m);
 }
+
+.overlay-image {
+    margin-top: 50px;
+    overflow: none;
+}
